# archive-extractorr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  rustfmt.toml
.github/workflows/: release.yml
src/: app.rs  cli.rs  extractor.rs  formats.rs  main.rs
src/ui/: mod.rs  theme.rs  widgets.rs
