[package]
name = "archive-extractor"
version = "0.1.0"
edition = "2021"
authors = ["Archive Extractor Team"]
description = "Cross-platform archive extractor with a modern GUI"
license = "MIT"
readme = "README.md"

[dependencies]
# GUI Framework
eframe = { version = "0.29", default-features = true }
egui = "0.29"

# Archive formats
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.4"
xz2 = "0.1"
unrar = "0.5"  # RAR support (requires libunrar)

# File dialogs
rfd = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"

# Async and utilities
parking_lot = "0.12"
open = "5.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.dev]
opt-level = 0

[[bin]]
name = "archive-extractor"
path = "src/main.rs"
