[package]
name = "archive-extractor"
version = "0.1.0"
edition = "2021"
authors = ["Archive Extractor Team"]
description = "Cross-platform archive extractor with a modern GUI"
license = "MIT"
readme = "README.md"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Archive formats
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.4"
xz2 = "0.1"
unrar = "0.5"  # RAR support (requires libunrar)

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# GUI Framework (optional for CLI-only builds)
eframe = { version = "0.29", default-features = true, optional = true }
egui = { version = "0.29", optional = true }
rfd = { version = "0.15", optional = true }
open = { version = "5.3", optional = true }
parking_lot = { version = "0.12", optional = true }

[features]
default = ["gui"]
gui = ["eframe", "egui", "rfd", "open", "parking_lot"]

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.dev]
opt-level = 0

[[bin]]
name = "archive-extractor"
path = "src/main.rs"
